2004-06-30  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimptoolbox.c (gimp_toolbox_button_accel_changed):
	do like GtkAccelLabel does and turn underscores in accels into
	spaces so e.g. "Page_Up" becomes "Page Up".


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13789 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-30  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimptoolbox.c (gimp_toolbox_button_accel_changed):
+	do like GtkAccelLabel does and turn underscores in accels into
+	spaces so e.g. "Page_Up" becomes "Page Up".
+
 2004-06-29  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/gimpdisplayshell.c: reordered drop destinations
