2004-06-30  Michael Natterer  <mitch@gimp.org>
	* widgets/gimpselectiondata.[ch] (gimp_selection_data_get_svg):
	changed return value from gchar* to const gchar*. Renamed
	parameters to be consistent with other SVG functions.

	* widgets/gimpcontainertreeview-dnd.c
	* widgets/gimpdnd.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13791 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-06-30  Michael Natterer  <mitch@gimp.org>
+
+	* widgets/gimpselectiondata.[ch] (gimp_selection_data_get_svg):
+	changed return value from gchar* to const gchar*. Renamed
+	parameters to be consistent with other SVG functions.
+
+	* widgets/gimpcontainertreeview-dnd.c
+	* widgets/gimpdnd.c: changed accordingly.
+
 2004-06-30  Simon Budig  <simon@gimp.org>
 
 	* app/vectors/gimpstroke.[ch]
