2004-06-30  Michael Natterer  <mitch@gimp.org>
	* app/core/gimppalette.[ch] (gimp_palette_add_entry): take
	const GimpRGB* instead of just GimpRGB*.
	Converted tabs to spaces.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13792 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-06-30  Michael Natterer  <mitch@gimp.org>
 
+	* app/core/gimppalette.[ch] (gimp_palette_add_entry): take
+	const GimpRGB* instead of just GimpRGB*.
+	Converted tabs to spaces.
+
+2004-06-30  Michael Natterer  <mitch@gimp.org>
+
 	* widgets/gimpselectiondata.[ch] (gimp_selection_data_get_svg):
 	changed return value from gchar* to const gchar*. Renamed
 	parameters to be consistent with other SVG functions.
