2004-06-30  Sven Neumann  <sven@gimp.org>
	* tools/pdbgen/pdb/drawable.pdb
	* libgimp/gimppixbuf.c: raised the maximum size for thumbnails
	from 256 to 512 pixels.

	* app/pdb/drawable_cmds.c
	* libgimp/gimpdrawable_pdb.c: regenerated.

	* plug-ins/gfig/gfig-preview.c
	* plug-ins/gfig/gfig.c: redone Bill's fix using
	gimp_image_get_thumbnail(). A lot simpler, renders the alpha
	checkerboard and also works for grayscale images.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13795 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2004-06-30  Sven Neumann  <sven@gimp.org>
+
+	* tools/pdbgen/pdb/drawable.pdb
+	* libgimp/gimppixbuf.c: raised the maximum size for thumbnails
+	from 256 to 512 pixels.
+
+	* app/pdb/drawable_cmds.c
+	* libgimp/gimpdrawable_pdb.c: regenerated.
+
+	* plug-ins/gfig/gfig-preview.c
+	* plug-ins/gfig/gfig.c: redone Bill's fix using
+	gimp_image_get_thumbnail(). A lot simpler, renders the alpha
+	checkerboard and also works for grayscale images.
+
 2004-06-30  Michael Natterer  <mitch@gimp.org>
 
 	Fixed a 1.2 -> 2.0 regression that was forgotten:
