--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-30  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/maze/maze_face.c: made the dialog look a little less
+	clumsy.
+
+2004-06-30  Sven Neumann  <sven@gimp.org>
+
 	* tools/pdbgen/pdb/drawable.pdb
 	* libgimp/gimppixbuf.c: raised the maximum size for thumbnails
 	from 256 to 512 pixels.
