Bill Skaggs  <weskaggs@primate.ucdavis.edu>
	* app/*/*-enums.h: did HIG-compliant capitalization in the right
	place, instead of the auto-generated *-enums.c files.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13798 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-30  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* app/*/*-enums.h: did HIG-compliant capitalization in the right
+	place, instead of the auto-generated *-enums.c files.
+	
 2004-06-30  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpdnd.[ch]
