2004-06-30  Sven Neumann  <sven@gimp.org>
	* app/core/core-enums.c
	* app/display/display-enums.c
	* app/paint/paint-enums.c
	* app/text/text-enums.c
	* app/widgets/widgets-enums.c: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13800 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-30  Sven Neumann  <sven@gimp.org>
+
+	* app/core/core-enums.c
+	* app/display/display-enums.c
+	* app/paint/paint-enums.c
+	* app/text/text-enums.c
+	* app/widgets/widgets-enums.c: regenerated.
+
 2004-06-30  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* app/actions/file-commands.c: revert previous change that was
