2004-06-30  Michael Natterer  <mitch@gimp.org>
	* app/plug-in/plug-ins.[ch] (plug_ins_init): added a GimpContext
	parameter and use it to start plug-ins.

	* app/core/gimp.c (gimp_real_restore): pass the user context.
	Restores script-fu's access to the global FG, FG, brush, ...


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13801 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-30  Michael Natterer  <mitch@gimp.org>
+
+	* app/plug-in/plug-ins.[ch] (plug_ins_init): added a GimpContext
+	parameter and use it to start plug-ins.
+
+	* app/core/gimp.c (gimp_real_restore): pass the user context.
+	Restores script-fu's access to the global FG, FG, brush, ...
+
 2004-06-30  Sven Neumann  <sven@gimp.org>
 
 	* app/core/core-enums.c
