2004-07-01  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpfgbgarea.[ch]: implement GtkWidget::drag_motion()
	and set the FG/BG depending on where the color was dropped. Also
	set the drag status accordingly so the cursor indicates whether
	dropping will have an effect or not. Fixes bug #145219.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13805 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-07-01  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpfgbgarea.[ch]: implement GtkWidget::drag_motion()
+	and set the FG/BG depending on where the color was dropped. Also
+	set the drag status accordingly so the cursor indicates whether
+	dropping will have an effect or not. Fixes bug #145219.
+
 2004-07-01  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimptemplate.c: do like Liam taught us and use the
