2004-07-01  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpselectiondata.[ch]: added (yet unused) functions
	gimp_selection_data_[get|set]_pixbuf().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13806 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-01  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpselectiondata.[ch]: added (yet unused) functions
+	gimp_selection_data_[get|set]_pixbuf().
+
 2004-07-01  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpfgbgarea.[ch]: implement GtkWidget::drag_motion()
