2004-07-01  Sven Neumann  <sven@gimp.org>
	* de.po: fixed a wrong translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13807 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,6 +1,10 @@
+2004-07-01  Sven Neumann  <sven@gimp.org>
+
+	* de.po: fixed a wrong translation.
+
 2004-06-29  Marco Ciampa  <ciampix@libero.it>
 
-        * it.po: updated italian translation.
+	* it.po: updated italian translation.
 
 2004-06-16  Marco Ciampa  <ciampix@libero.it>
 
