2004-07-01  Michael Schumacher  <schumaml@cvs.gnome.org>
	* plug-ins/common/align_layers.c: there seems to be no reason why
	this plug-in should not work on INDEXED* images, added it to the
	registered image types


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13809 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-01  Michael Schumacher  <schumaml@cvs.gnome.org>
+
+	* plug-ins/common/align_layers.c: there seems to be no reason why
+	this plug-in should not work on INDEXED* images, added it to the
+	registered image types
+
 2004-07-01  Roman Joost <roman@bromeco.de>
 
         * plug-ins/script-fu/scripts/blend-anim.scm
