2004-07-01  Roman Joost <roman@bromeco.de>
        * de.po: fixed spelling error


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13811 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-01  Roman Joost <roman@bromeco.de>
+
+        * de.po: fixed spelling error
+        
 2004-06-20  Marco Ciampa <ciampix@libero.it>
 
 	* it.po: Updated italian translation.
