--- a/po-script-fu/de.po
+++ b/po-script-fu/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: GIMP HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-07-01 19:25+0200\n"
-"PO-Revision-Date: 2004-07-01 22:01+0200\n"
+"PO-Revision-Date: 2004-07-01 23:17+0200\n"
 "Last-Translator: Roman Joost <roman@bromeco.de>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -1129,7 +1129,7 @@ msgid ""
 "(Better, but only for images with alot of white)"
 msgstr ""
 "nur Abdunkeln\n"
-"(Besser, aber nur für Bilder hohem Weißanteil)"
+"(Besser, aber nur für Bilder mit hohem Weißanteil)"
 
 #: plug-ins/script-fu/scripts/coffee.scm.h:3
 msgid "Stains"
