2004-07-02  Michael Natterer  <mitch@gimp.org>
	* plug-ins/gimpressionist/Makefile.am
	* plug-ins/gimpressionist/*.[ch]: applied patch from Shlomi Fish
	that massively cleans up gimppressionist (touching all files and
	addding some new ones) and adds a simple PDB interface for
	selecting one of the previously created presets.
	Fixes bugs #145191, #144913 and #144922.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13814 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-07-02  Michael Natterer  <mitch@gimp.org>
+
+	* plug-ins/gimpressionist/Makefile.am
+	* plug-ins/gimpressionist/*.[ch]: applied patch from Shlomi Fish
+	that massively cleans up gimppressionist (touching all files and
+	addding some new ones) and adds a simple PDB interface for
+	selecting one of the previously created presets.
+	Fixes bugs #145191, #144913 and #144922.
+
 2004-07-01  Sven Neumann  <sven@gimp.org>
 
 	* configure.in: bumped version number to 2.1.2.
