2004-07-02  Sven Neumann  <sven@gimp.org>
	* app/actions/edit-actions.c: don't let the Paste menu items
	sensitivity depend on the availability of clipboard data because
	we aren't notified when the GDK clipboard changes.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13816 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-07-02  Sven Neumann  <sven@gimp.org>
 
+	* app/actions/edit-actions.c: don't let the Paste menu items
+	sensitivity depend on the availability of clipboard data because
+	we aren't notified when the GDK clipboard changes.
+
+2004-07-02  Sven Neumann  <sven@gimp.org>
+
 	* app/gui/Makefile.am
 	* app/gui/clipboard.[ch]: new files implementing a clipboard for
 	image data based on GDK_SELECTION_CLIPBOARD (bug #133247).
