2004-07-02  Philip Lafleur  <plafleur@cvs.gnome.org>
  * ChangeLog: Added bug number to my ChangeLog entry.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13820 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@
 	* app/tools/gimptransformtool.c:
 	* app/tools/tools-enums.[ch]: Replaced "Preview" checkbutton with
 	a combobox with options "Outline", "Grid", "Image", and
-	"Image + Grid".
+	"Image + Grid". Addresses bug #108172.
 
 2004-07-02  Sven Neumann  <sven@gimp.org>
 
