--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-03  Michael Natterer  <mitch@gimp.org>
+
+	* app/tools/gimppainttool.c (gimp_paint_tool_cursor_update): if
+	the color tool is enabled, skip cursor hiding entirely.
+
 2004-07-03  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/dog.c (dog): removed #ifdef'ed code that isn't
