2004-07-04  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/channel_mixer.c: don't attempt to store a
	pointer to the last used filename in the plug-in parameter
	struct. Fixes bug #145380.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13825 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-07-04  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/channel_mixer.c: don't attempt to store a
+	pointer to the last used filename in the plug-in parameter
+	struct. Fixes bug #145380.
+
+2004-07-04  Sven Neumann  <sven@gimp.org>
+
 	* modules/cdisplay_gamma.c
 	* modules/cdisplay_highcontrast.c: added object properties for
 	configurable values.
